--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
    
-    <title>My Portfolio | 2024</title>
+    <title>My Portfolio || 2024</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
